--- a/rebar.config
+++ b/rebar.config
@@ -7,7 +7,7 @@
         {providers,        "1.9.0"},
         {getopt,           "1.0.1"},
         {bbmustache,       "1.12.2"},
-        {relx,             "4.6.0"},
+        {relx,             {git, "https://github.com/martinsumner/relx.git", {branch, "mas-alternative_deprecation_warning"}}},
         {cf,               "0.3.1"},
         {cth_readable,     "1.5.1"},
         {eunit_formatters, "0.5.0"}]}.
